400772: Cannot change vm argument XX:MaxPermSize in launch configuration https://bugs.eclipse.org/bugs/show_bug.cgi?id=400772